--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Il mio viaggio a Londra</title>
 </head>
 <body>
+    <sezione>
+        <!-- foto di arrivo Londra -->
+        <h1>IL MIO VIAGGIO A LONDRA</h1>
+        <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="ruota panoramica">
+        <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="scorcio ponte">
+        <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="foto Big Ben">
+    </sezione>
+    <hr>
     
 </body>
 </html>
