--- a/index.html
+++ b/index.html
@@ -15,8 +15,47 @@
         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="ruota panoramica">
         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="scorcio ponte">
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="foto Big Ben">
+        <!-- fine foto di arrivo Londra -->
     </sezione>
     <hr>
-    
+    <section>
+        <!-- riepilogo spese -->
+        <h3>LE MIE SPESE:</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>1</th>
+                    <th>Biglietto Aereo</th>
+                    <th>120€</th>
+                </tr>
+                <tr>
+                    <th>1</th>
+                    <th>Biglietto Aereo</th>
+                    <th>120€</th>
+                </tr>
+                <tr>
+                    <th>1</th>
+                    <th>Biglietto Aereo</th>
+                    <th>120€</th>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th>Totale</th>
+                    <th></th>
+                    <th>360€</th>
+                </tr>
+            </tfoot>
+        </table>
+        <!-- fine riepilogo spese -->
+    </section>
+    <hr>
 </body>
 </html>
