--- a/index.html
+++ b/index.html
@@ -57,5 +57,18 @@
         <!-- fine riepilogo spese -->
     </section>
     <hr>
+    <section>
+        <!-- elenco cose da fare -->
+        <h4>COSE DA FARE:</h4>
+        <ul>
+            <li>Visitare la Tower of London ✗</li>
+            <li>Visitare Greenwich ✓</li>
+            <li>Ascoltare un'artista di strada a Covent Garden ✓</li>
+            <li>Mangiare il tipico Fish and Chips inglese ✗</li>
+        </ul>
+        <!-- fine elenco cose da fare -->
+        <hr>
+    </section>
+    <hr>
 </body>
 </html>
