feat: elenco di tutte le info utili

--- a/index.html
+++ b/index.html
@@ -67,7 +67,36 @@
             <li>Mangiare il tipico Fish and Chips inglese ✗</li>
         </ul>
         <!-- fine elenco cose da fare -->
-        <hr>
+    </section>
+    <hr>
+    <section>
+        <!-- elenco info utili -->
+        <h4>INFO UTILI:</h4>
+        <ol>
+            <li>
+                <h4>Numeri utili di Emergenza:</4h>
+                <ul>
+                 <li>999 - Emergenza</li>
+                 <li>101 - Numero Polizia</li>
+                 <li>111 - Numero Assistenza Medica</li>
+                </ul>
+            </li>
+            <li>
+                <h4>Hotel:</h4>
+                <ul>
+                    <li>Nome Hotel: Buckingham Palace</li>
+                    <li>Indirizzo Hotel: Westmister, London SW1A 1AA, Regno Unito</li>
+                </ul>
+            </li>
+            <li>
+                <h4>Aereo:</h4>
+                <ul>
+                    <li>Volo di andata: Y1234X, ore 9:30 da Milano Malpensa</li>
+                    <li>Volo di ritorno: Y1236X, ore 18:30 da London Heathrow</li>
+                </ul>
+            </li>
+        </ol>
+        <!-- fine elenco info utili -->
     </section>
     <hr>
 </body>
