feat: fine lavoro con foto finali

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h4>INFO UTILI:</h4>
         <ol>
             <li>
-                <h4>Numeri utili di Emergenza:</4h>
+                <h4>Numeri utili di Emergenza:</h4>
                 <ul>
                  <li>999 - Emergenza</li>
                  <li>101 - Numero Polizia</li>
@@ -99,5 +99,12 @@
         <!-- fine elenco info utili -->
     </section>
     <hr>
+    <section>
+        <!-- foto finali vacanze  -->
+        <h4>Le Foto:</h4>
+        <img src="./img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg" alt="foto Cattedrale di Saint Paul">
+        <img src="./img/london-400x400-compressor_0.jpg" alt="foto Tower Bridge">
+        <!-- fine foto finali vacanze -->
+    </section>
 </body>
 </html>
